--- a/.github/workflows/test_gh_workflow.yml
+++ b/.github/workflows/test_gh_workflow.yml
@@ -28,11 +28,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with Ruff
-      run: |
-        pip install ruff
-        ruff check --output-format=github .
-      continue-on-error: true
+    # - name: Lint with Ruff
+    #   run: |
+    #     pip install ruff
+    #     ruff check --output-format=github .
+    #   continue-on-error: true
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -41,5 +41,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest test_github.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        # pip install pytest pytest-cov
+        # pytest test_github.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest -s "test_github.py::TestGithub::test_repo_init"
