--- a/.github/workflows/test_gh_workflow.yml
+++ b/.github/workflows/test_gh_workflow.yml
@@ -43,8 +43,9 @@ jobs:
       run: |
         # pip install pytest pytest-cov
         # pytest test_github.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-        pytest -s "test_github.py::TestGithub::test_repo_init"
-        pytest -s "test_github.py::TestGithub::test_open_existing_repo"
+        # pytest -s "test_github.py::TestGithub::test_repo_init"
+        # pytest -s "test_github.py::TestGithub::test_open_existing_repo"
+        pytest -m CI
     # - name: Generate pytest report
     #   run: |
     #     pytest -m smoke --html=.\html_reports\report_gh_test.html --self-contained-html
