--- a/.github/workflows/test_gh_workflow.yml
+++ b/.github/workflows/test_gh_workflow.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: 4259d927865045c5ea89f7c0b809219c64d7c540
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -44,7 +46,13 @@ jobs:
         # pip install pytest pytest-cov
         # pytest test_github.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         pytest -s "test_github.py::TestGithub::test_repo_init"
-        # pytest -s "test_github.py::TestGithub::test_open_existing_repo"
+        pytest -s "test_github.py::TestGithub::test_open_existing_repo"
+        pytest -s "test_github.py::TestGithub::test_clone_remote_repo_https"
+        pytest -s "test_github.py::TestGithub::test_commit"
+        pytest -s "test_github.py::TestGithub::test_create_new_branch"
+        pytest -s "test_github.py::TestGithub::test_switch_branch"
+        pytest -s "test_github.py::TestGithub::test_pull"
+        pytest -s "test_github.py::TestGithub::test_push"        
         # pytest -m CI
     # - name: Generate pytest report
     #   run: |
