--- a/.github/workflows/test_gh_workflow.yml
+++ b/.github/workflows/test_gh_workflow.yml
@@ -20,7 +20,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        ref: 4259d927865045c5ea89f7c0b809219c64d7c540
+        # ref: 4259d927865045c5ea89f7c0b809219c64d7c540 
+        ref: 699b5dbe573e91c311671016a4d9e41b487fa51f
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
