--- a/.github/workflows/test_gh_workflow.yml
+++ b/.github/workflows/test_gh_workflow.yml
@@ -47,10 +47,10 @@ jobs:
         # pytest test_github.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         pytest -s "test_github.py::TestGithub::test_repo_init"
         pytest -s "test_github.py::TestGithub::test_open_existing_repo"
-        pytest -s "test_github.py::TestGithub::test_commit"
-        pytest -s "test_github.py::TestGithub::test_create_new_branch"
+        # pytest -s "test_github.py::TestGithub::test_commit"
+        # pytest -s "test_github.py::TestGithub::test_create_new_branch"
         pytest -s "test_github.py::TestGithub::test_switch_branch"
-        pytest -s "test_github.py::TestGithub::test_pull"
+        # pytest -s "test_github.py::TestGithub::test_pull"
         pytest -s "test_github.py::TestGithub::test_push"        
         # pytest -m smoke
 
