--- a/.github/workflows/test_github_workflow.yml
+++ b/.github/workflows/test_github_workflow.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        ref: 4259d927865045c5ea89f7c0b809219c64d7c540
+        ref: test_workflow_1
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -38,14 +38,14 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest -s "test_github.py::TestGithub::test_repo_init"
-        pytest -s "test_github.py::TestGithub::test_open_existing_repo"
+        # pytest -s "test_github.py::TestGithub::test_repo_init"
+        # pytest -s "test_github.py::TestGithub::test_open_existing_repo"
         # pytest -s "test_github.py::TestGithub::test_commit"
         # pytest -s "test_github.py::TestGithub::test_create_new_branch"
-        pytest -s "test_github.py::TestGithub::test_switch_branch"
+        # pytest -s "test_github.py::TestGithub::test_switch_branch"
         # pytest -s "test_github.py::TestGithub::test_pull"
-        pytest -s "test_github.py::TestGithub::test_push"        
-        # pytest -m CI
+        # pytest -s "test_github.py::TestGithub::test_push"        
+        pytest -m smoke
     # - name: Generate pytest report
     #   run: |
     #     pytest -m smoke --html=.\html_reports\report_gh_test.html --self-contained-html
